--- a/app/design/frontend/pc/default/layout/catalog.xml
+++ b/app/design/frontend/pc/default/layout/catalog.xml
@@ -146,23 +146,18 @@ Product view
         <label>Catalog Product View (Any)</label>
         <!-- Mage_Catalog -->
         <reference name="root">
-            <action method="setTemplate"><template>page/2columns-right.phtml</template></action>
+            <action method="setTemplate"><template>page/1column.phtml</template></action>
         </reference>
         <reference name="head">
             <action method="addJs"><script>varien/product.js</script></action>
             <action method="addJs"><script>varien/configurable.js</script></action>
-            <action method="addJs"><script>zoom/estorm-zoom-0.0.1-min.js</script></action>
+            <action method="addJs"><script>zoom/estorm-zoom-0.0.1.js</script></action>
             <action method="addItem"><type>js_css</type><name>calendar/calendar-win2k-1.css</name><params/><!--<if/><condition>can_load_calendar_js</condition>--></action>
             <action method="addItem"><type>js</type><name>calendar/calendar.js</name><!--<params/><if/><condition>can_load_calendar_js</condition>--></action>
             <action method="addItem"><type>js</type><name>calendar/calendar-setup.js</name><!--<params/><if/><condition>can_load_calendar_js</condition>--></action>
         </reference>
         <reference name="content">
             <block type="catalog/product_view" name="product.info" template="catalog/product/view.phtml">
-                <!--
-                <action method="addReviewSummaryTemplate"><type>default</type><template>review/helper/summary.phtml</template></action>
-                <action method="addReviewSummaryTemplate"><type>short</type><template>review/helper/summary_short.phtml</template></action>
-                <action method="addReviewSummaryTemplate"><type>...</type><template>...</template></action>
-                -->
                 <block type="catalog/product_view_media" name="product.info.media" as="media" template="catalog/product/view/media.phtml"/>
                 <block type="core/text_list" name="alert.urls" as="alert_urls" translate="label">
                     <label>Alert Urls</label>
@@ -225,6 +220,7 @@ Product view
 
                 <block type="catalog/product_list_related" name="catalog.product.related" template="catalog/product/list/related.phtml"/>
                 <block type="reports/product_viewed" name="product_viewed" template="catalog/category/product_viewed.phtml" />
+                <block type="askquestions/askquestions" name="askquestions"  template="askquestions/askquestions.phtml" />
             </block>
         </reference>
 
