--- a/skin/frontend/pc/default/scss/styles.css
+++ b/skin/frontend/pc/default/scss/styles.css
@@ -366,7 +366,7 @@ p.required { font-size: 11px; text-align: right; color: #EB340A; }
 
 .messages { width: 100%; overflow: hidden; }
 
-.messages li { margin: 0 0 10px !important; }
+.messages li { margin: 10px 0 10px !important; }
 
 .messages li li { margin: 0 0 3px !important; }
 
@@ -1313,8 +1313,6 @@ tr.summary-details-excluded { font-style: italic; }
 .product-image-popup .image-label { font-size: 13px; font-weight: bold; margin: 0 0 10px; color: #2f2f2f; }
 
 /* Product Shop */
-.product-view .product-shop { float: right; width: 330px; }
-
 .col1-layout .product-view .product-shop { float: right; width: 545px; }
 
 .col3-layout .product-view .product-shop { float: none; width: auto; }
@@ -2388,6 +2386,44 @@ tr.summary-details-excluded { font-style: italic; }
 
 .MB10 { margin-bottom: 10px; }
 
+.W10 { width: 10%; }
+
+.W15 { width: 15%; }
+
+.W20 { width: 20%; }
+
+.W25 { width: 25%; }
+
+.W30 { width: 30%; }
+
+.W35 { width: 35%; }
+
+.W40 { width: 40%; }
+
+.W45 { width: 45%; }
+
+.W50 { width: 50%; }
+
+.W55 { width: 55%; }
+
+.W60 { width: 60%; }
+
+.W65 { width: 65%; }
+
+.W70 { width: 70%; }
+
+.W75 { width: 75%; }
+
+.W80 { width: 80%; }
+
+.W85 { width: 85%; }
+
+.W90 { width: 90%; }
+
+.W95 { width: 95%; }
+
+.W100 { width: 100%; }
+
 .new_header { width: 100%; max-width: 1365px; }
 .new_header .header_top { height: 33px; line-height: 33px; }
 .new_header .header_top p { margin: 0; }
@@ -2456,6 +2492,9 @@ tr.summary-details-excluded { font-style: italic; }
 .payments .delivery { width: 214px; background-position: 0 -30px; }
 
 .copyright { text-align: center; padding: 20px 0; font: 14px/34px Helvetica,Arial,sans-serif; color: #333; }
+
+#gotopbtn { float: right; margin-right: -20px; }
+#gotopbtn a { background-image: url("../images/commont/back.png"); background-repeat: no-repeat; background-color: #f39; background-position: center center; bottom: 200px; cursor: pointer; height: 52px; position: fixed; text-indent: -999em; width: 51px; right: 20px; z-index: 10000; border-radius: 10px; }
 
 .owl-carousel .animated { -webkit-animation-duration: 1000ms; animation-duration: 1000ms; -webkit-animation-fill-mode: both; animation-fill-mode: both; }
 
@@ -2618,6 +2657,7 @@ tr.summary-details-excluded { font-style: italic; }
 .page .breadcrumbs { font-size: 12px; height: 30px; }
 .page .breadcrumbs ul { position: relative; display: inline-block; float: left; height: 30px; z-index: 1; border-left: 1px solid #ccc; }
 .page .breadcrumbs ul li { display: inline-block; float: left; position: relative; background: url(../images/commont/bread_bg_f.png) no-repeat center right; height: 30px; line-height: 30px; padding: 0 15px; max-width: 600px; }
+.page .breadcrumbs ul li a { display: inline-block; max-width: 250px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; }
 .page .breadcrumbs ul li.last { background: url(../images/commont/bread_bg_3.png) no-repeat center right; color: #fff; }
 .page .breadcrumbs ul li strong { display: inline-block; float: left; background: #333333; position: relative; padding-left: 30px; height: 30px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; width: 100%; }
 .page .breadcrumbs ul .home { margin-left: 0; }
@@ -2625,18 +2665,18 @@ tr.summary-details-excluded { font-style: italic; }
 .page .breadcrumbs .share > span { float: left; }
 .page .breadcrumbs .share .addthis_sharing_toolbox { float: right; height: 30px; overflow: hidden; padding: 2px 0 0 5px; }
 .page .category_name_top { font: normal 18px/31px Helvetica,Arial; border-bottom: 2px solid #666; height: 31px; }
-.page .currently { padding: 5px; *zoom: 1; }
+.page .currently { *zoom: 1; padding: 5px; }
 .page .currently:after { display: block; content: "clear"; height: 0; clear: both; overflow: hidden; visibility: hidden; }
 .page .currently h4 { padding: 3px 5px 2px 0; font: normal 18px/18px Helvetica,Arial,Georgia,verdana,sans-serif; height: 18px; color: #666; float: left; }
 .page .currently ol li { display: inline-block; float: left; margin-right: 5px; background: #424242; border-radius: 3px; color: #fff; padding: 3px 5px; }
 .page .currently ol li span { border-right: 1px dotted #fff; display: inline-block; padding-right: 5px; }
 .page .currently ol li .btn-remove { display: inline-block; height: 8px; width: 14px; background: url(../images/commont/btn_remove.png) center 0 no-repeat; }
-.page .filter-nav { border: 1px solid #ddd; background: #fff; *zoom: 1; }
+.page .filter-nav { *zoom: 1; border: 1px solid #ddd; background: #fff; }
 .page .filter-nav:after { display: block; content: "clear"; height: 0; clear: both; overflow: hidden; visibility: hidden; }
 .page .filter-nav dl { border-bottom: 1px solid rgba(223, 223, 223, 0.5); display: inline-block; float: left; width: 100%; }
 .page .filter-nav dl:last-child { border: 0; }
-.page .filter-nav dl dt { width: 180px; float: left; text-align: right; padding-right: 15px; color: #333; text-transform: capitalize; white-space: nowrap; font-weight: bold; font-size: 12px; padding-top: 5px; }
-.page .filter-nav dl dd { padding-left: 15px; float: left; border-left: 1px solid rgba(223, 223, 223, 0.5); max-width: 1175px; }
+.page .filter-nav dl dt { min-width: 15%; float: left; text-align: right; padding-right: 15px; color: #333; text-transform: capitalize; white-space: nowrap; font-weight: bold; font-size: 12px; padding-top: 5px; }
+.page .filter-nav dl dd { padding-left: 15px; float: left; border-left: 1px solid rgba(223, 223, 223, 0.5); max-width: 85%; }
 .page .filter-nav dl dd ol li { float: left; line-height: 30px; margin-right: 15px; color: #999; }
 .page .filter-nav dl dd ol li .m-selected-filter-item { background: url(../images/commont/checked.png) no-repeat left; padding-left: 15px; color: #333; }
 .page .filter-nav dl dd ol li a { background: url(../images/commont/no_checked.png) no-repeat left; padding-left: 15px; color: #666; }
@@ -2695,6 +2735,41 @@ tr.summary-details-excluded { font-style: italic; }
 
 .estorm-zoom-gallery li img { border: 1px #eeeeee solid; display: block; }
 
-header, .product-shop { opacity: 0; }
+.page .product-view .product-essential { position: relative; }
+.page .product-view .product-essential .product-img-box { position: relative; z-index: 1; }
+.page .product-view .product-shop { position: relative; padding-left: 420px; float: none; width: auto; }
+.page .product-view .product-shop .product-name h1 { text-transform: Capitalize; }
+.page .product-view .product-shop .commont { display: inline-block; }
+.page .product-view .product-shop .commont .ratings { float: left; margin: 0; }
+.page .product-view .product-shop .commont .ask-a-question { float: left; }
 
+.shopping_bag .scart_step1 { background: url("../images/commont/scart_step.gif") no-repeat center top; height: 48px; overflow: hidden; margin: 30px 0; }
+.shopping_bag .shopping_bag_title { border-bottom: 1px solid #51423A; font-size: 16px; text-transform: capitalize; color: #000; padding-bottom: 10px; }
+.shopping_bag .shopping_bag_list .data-table { border: 0; }
+.shopping_bag .shopping_bag_list .data-table thead th { background: none; border-right: 0; height: 35px; border-bottom: 1px solid #d2d2d2; color: #5D4C43; font-size: 14px; font-weight: normal; }
+.shopping_bag .shopping_bag_list .data-table tbody td a.product-image { display: block; padding: 5px; border: 1px solid #ccc; }
+.shopping_bag .shopping_bag_list .data-table tbody td a.product-image image { max-width: 100%; }
+.shopping_bag .shopping_bag_list .data-table tbody td .product-name a { text-decoration: underline; color: #000000; font-weight: normal; }
+.shopping_bag .shopping_bag_list .data-table tbody td .product-name a:hover { color: #f39; }
+.shopping_bag .shopping_bag_list .data-table .item-options { *zoom: 1; color: #775E51; }
+.shopping_bag .shopping_bag_list .data-table .item-options:after { display: block; content: "clear"; height: 0; clear: both; overflow: hidden; visibility: hidden; }
+.shopping_bag .shopping_bag_list .data-table .item-options dt { font-style: normal; font-weight: normal; float: left; clear: left; }
+.shopping_bag .shopping_bag_list .data-table .item-options dd { float: left; padding: 0; margin: 0; clear: right; }
+.shopping_bag .shopping_bag_list .data-table tbody th, .shopping_bag .shopping_bag_list .data-table tbody td { border-right: 0; }
+.shopping_bag .shopping_bag_list .paynow { display: inline-block; background: #f39; border-radius: 3px; padding: 2px 5px; color: #fff; }
+.shopping_bag .shopping_bag_list .remove { display: block; color: #999999; padding-top: 4px; text-decoration: underline; }
+.shopping_bag .shopping_bag_coupon { float: left; }
+.shopping_bag .shopping_bag_coupon > span { font-size: 12px; color: #333333; }
+.shopping_bag .shopping_bag_coupon > span.arrow { padding-right: 15px; background: url(http://s.dresswe.com/images/arrow1216.jpg) no-repeat scroll right center; }
+.shopping_bag .shopping_bag_coupon > span.arrow1 { padding-right: 15px; background: url(http://s.dresswe.com/images/arrow1217.jpg) no-repeat scroll right center; }
+.shopping_bag .shopping_bag_coupon #discount-coupon-form { display: none; }
+.shopping_bag .shopping_bag_coupon #discount-coupon-form .discount { padding: 10px 50px 10px 10px; border: 1px solid #ccc; }
+.shopping_bag .shopping_bag_totals { float: right; }
+.shopping_bag .shopping_bag_totals #shopping-cart-totals-table tr td { line-height: 40px; }
+.shopping_bag .shopping_bag_totals #shopping-cart-totals-table tr td:first-child { text-align: left !important; min-width: 200px; }
+.shopping_bag .shopping_bag_totals #shopping-cart-totals-table tr td:last-child { color: #f39; }
+.shopping_bag .shopping_bag_totals #shopping-cart-totals-table tbody tr td { border-bottom: 1px dashed #999; font-size: 13px; }
+.shopping_bag .shopping_bag_totals #shopping-cart-totals-table tbody tr td:first-child { color: #5D4C43; }
+.shopping_bag .shopping_bag_totals #shopping-cart-totals-table tfoot tr { font-size: 18px; }
+.shopping_bag .shopping_bag_totals #shopping-cart-totals-table tfoot tr td:first-child { font-weight: bolder; color: #000; }
 /*# sourceMappingURL=styles.css.map */
