--- a/skin/frontend/base/default/css/email-inline.css
+++ b/skin/frontend/base/default/css/email-inline.css
@@ -1,33 +1,8 @@
-/**
- * Magento
- *
- * NOTICE OF LICENSE
- *
- * This source file is subject to the Academic Free License (AFL 3.0)
- * that is bundled with this package in the file LICENSE_AFL.txt.
- * It is also available through the world-wide-web at this URL:
- * http://opensource.org/licenses/afl-3.0.php
- * If you did not receive a copy of the license and are unable to
- * obtain it through the world-wide-web, please send an email
- * to license@magento.com so we can send you a copy immediately.
- *
- * DISCLAIMER
- *
- * Do not edit or add to this file if you wish to upgrade Magento to newer
- * versions in the future. If you wish to customize Magento for your
- * needs please refer to http://www.magento.com for more information.
- *
- * @category    design
- * @package     base_default
- * @copyright   Copyright (c) 2006-2016 X.commerce, Inc. and affiliates (http://www.magento.com)
- * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
- */
-/* ============================================ *
- * General Styles
- * ============================================ */
 body, table.body, th, h1, h2, h3, h4, h5, h6, td, p, strong {
-  font-family: Verdana, Arial;
+  font-family: "lucida Grande",Verdana,"Microsoft YaHei";
   font-weight: normal;
+  font-size: 12px;
+      color: #444;
 }
 
 body {
@@ -35,7 +10,7 @@ body {
   padding: 0;
   text-align: left;
   color: #333333;
-  background-color: #ebebeb;
+  background-color: #fff;
 }
 
 body {
@@ -53,7 +28,7 @@ img {
 }
 
 body {
-  background: #ebebeb;
+  background: #fff;
   font-size: 12px;
   margin: 0;
   padding: 0;
@@ -82,13 +57,13 @@ a {
 
 html,
 #background-table {
-  background-color: #ebebeb;
+  background-color: #fff;
 }
 
 #background-table {
-  font-size: 12px;
-  margin: 0 auto;
-  padding: 0;
+        font-size: 12px;
+        margin: 5px auto;
+        padding: 0;
 }
 
 .container-td {
@@ -96,7 +71,7 @@ html,
 }
 
 .container-table {
-  width: 600px;
+  width: 100%;
   margin: 0 auto;
 }
 
@@ -104,9 +79,9 @@ html,
  * Header Styles
  * ============================================ */
 .top-content {
-  border: 1px solid #ebebeb;
-  background: #FFF;
-  padding: 5px;
+  background: #333;
+  padding: 2px;
+  margin-bottom:5px;
 }
 
 table.logo-container {
@@ -170,9 +145,17 @@ td.store-info a {
   color: #3696c2;
 }
 
+.valign_bottom{
+  vertical-align: bottom;
+  padding-bottom: 5px;
+}
+
 /* ============================================ *
  * Content - Styles
  * ============================================ */
+.main_body{
+    background:#fff;
+}
 td.order-details {
   padding: 5px 15px;
   text-align: center;
@@ -333,8 +316,9 @@ td.order-details p {
 }
 
 .action-content {
-  padding: 10px 20px 15px;
+  padding:40px;
   line-height: 18px;
+  font-size: 16px;
 }
 
 .action-content h1 {
@@ -747,4 +731,52 @@ p.sku {
 .price-box .price-excluding-tax,
 .price-box .price-including-tax {
   display: block;
+}
+
+
+.new_nav{
+  list-style: none; margin: 0; padding:0;
+}
+.new_nav li{
+  float:left;padding:0 5px;list-style: none;
+}
+.top_border li{
+  border-right:1px solid #333;
+}
+
+.new_nav li.first{
+  padding-left:0;
+}
+.new_nav li.last{
+  border:0;
+}
+.new_nav li a{
+  color:#333;text-decoration: none;font-size: 16px;
+}
+
+.FL{
+  float:left;
+}
+.clear{
+  clear:both;
+}
+.MT10{
+  margin: 5px 0 5px 0;
+}
+.separate{
+  padding:0;
+}
+.storeFrontendName{
+  color:#f39;
+}
+.contactus{
+  color:#f39;text-decoration: none;  
+}
+.customer_email{
+  color:#444;
+  width:50px;height:15px;line-height:20px;overflow:hidden;display: inline-block;
+}
+
+.customer_email a{
+  color:#444;text-decoration: none;  
 }
