--- a/skin/frontend/pc/default/scss/styles.css
+++ b/skin/frontend/pc/default/scss/styles.css
@@ -2745,6 +2745,8 @@ tr.summary-details-excluded { font-style: italic; }
 
 .shopping_bag .scart_step1 { background: url("../images/commont/scart_step.gif") no-repeat center top; height: 48px; overflow: hidden; margin: 30px 0; }
 .shopping_bag .shopping_bag_title { border-bottom: 1px solid #51423A; font-size: 16px; text-transform: capitalize; color: #000; padding-bottom: 10px; }
+.shopping_bag .shopping_bag_list { *zoom: 1; }
+.shopping_bag .shopping_bag_list:after { display: block; content: "clear"; height: 0; clear: both; overflow: hidden; visibility: hidden; }
 .shopping_bag .shopping_bag_list .data-table { border: 0; }
 .shopping_bag .shopping_bag_list .data-table thead th { background: none; border-right: 0; height: 35px; border-bottom: 1px solid #d2d2d2; color: #5D4C43; font-size: 14px; font-weight: normal; }
 .shopping_bag .shopping_bag_list .data-table tbody td a.product-image { display: block; padding: 5px; border: 1px solid #ccc; }
@@ -2772,4 +2774,14 @@ tr.summary-details-excluded { font-style: italic; }
 .shopping_bag .shopping_bag_totals #shopping-cart-totals-table tbody tr td:first-child { color: #5D4C43; }
 .shopping_bag .shopping_bag_totals #shopping-cart-totals-table tfoot tr { font-size: 18px; }
 .shopping_bag .shopping_bag_totals #shopping-cart-totals-table tfoot tr td:first-child { font-weight: bolder; color: #000; }
+.shopping_bag .shopping_bag_pay { float: right; clear: both; margin: 45px 0px 20px 0; }
+.shopping_bag .shopping_bag_pay a { text-decoration: underline; margin-right: 15px; }
+.shopping_bag .shopping_bag_pay .paypal_topay { cursor: pointer; background: url(../images/commont/paypaltopay.jpg) no-repeat 0 0; width: 170px; height: 32px; border: medium none; outline: none; }
+.shopping_bag .shopping_bag_pay .cor { padding: 0 15px; }
+.shopping_bag .shopping_bag_pay .btn_ptp { outline: none; background: url(../images/commont/jxs.png) no-repeat 15px 6px #f39; padding: 0 25px 0 40px; text-align: center; font-size: 15px; color: #fff; height: 30px; line-height: 30px; border: none; cursor: pointer; border-radius: 5px; }
+.shopping_bag .empty_cart_div { width: 100%; text-align: center; vertical-align: middle; margin: 50px auto; }
+.shopping_bag .empty_cart_div .bt-1-new { background: #f39; padding: 2px 10px; display: inline-block; color: #fff; border-radius: 5px; }
+.shopping_bag .empty_cart_div .empty_cart_msg { height: 100px; text-align: left; display: inline-block; color: #4c5253; }
+.shopping_bag .empty_cart_div h4 { font-size: 18px; margin-bottom: 10px; }
+
 /*# sourceMappingURL=styles.css.map */
