--- a/app/design/frontend/pc/default/template/easycheckout/onestep/review/info.phtml
+++ b/app/design/frontend/pc/default/template/easycheckout/onestep/review/info.phtml
@@ -20,8 +20,8 @@
         <?php endif; ?>
         <thead>
             <tr>
-                <th rowspan="<?php echo $rowspan ?>"><?php echo $this->__('Product Name') ?></th>
-                <th colspan="<?php echo $colspan ?>" class="a-center"><?php echo $this->__('Price') ?></th>
+                <th rowspan="<?php echo $rowspan ?>"><?php echo $this->__('Product') ?></th>
+<!--                <th colspan="--><?php //echo $colspan ?><!--" class="a-center">--><?php //echo $this->__('Price') ?><!--</th>-->
                 <th rowspan="<?php echo $rowspan ?>" class="a-center"><?php echo $this->__('Qty') ?></th>
                 <th colspan="<?php echo $colspan ?>" class="a-center"><?php echo $this->__('Subtotal') ?></th>
             </tr>
@@ -50,7 +50,6 @@
                     }?>
 <script type="text/javascript">
 //<![CDATA[
-    decorateTable('checkout-review-table');
     truncateOptions();
     $$('dl.item-options').each(function(element){element.hide();});
     $$('a.close-options-link').each(function(element){element.hide();});
