--- a/app/design/frontend/pc/default/template/review/upload-a-photo.phtml
+++ b/app/design/frontend/pc/default/template/review/upload-a-photo.phtml
@@ -1,8 +1,8 @@
-    <style>
-        .std{
-            display: none;
-        }
-    </style>
+<!--    <style>-->
+<!--        .std{-->
+<!--            display: none;-->
+<!--        }-->
+<!--    </style>-->
 
 
 
