--- a/skin/frontend/pc/default/scss/_product.scss
+++ b/skin/frontend/pc/default/scss/_product.scss
@@ -610,7 +610,7 @@
         left:0;
         bottom:0;
         right:0;
-        background:#000;
+        background:rgba(0, 0, 0, 0.3);
         z-index: 1;
         .review_detail{
             background:#fff;
@@ -719,6 +719,58 @@
         }
         h4{
             color: #666;
+        }
+    }
+
+    .VIEW_GALLERY{
+        .review_list{
+            @include float_clear;
+            &>div{
+                float: left;
+                width:24%;
+                margin-right: 1%;
+                margin-bottom: 10px;
+                height:530px;
+                overflow:hidden;
+                border:1px solid #ddd;
+                border-radius:3px;
+                padding:5px;
+            }
+            .reviewContent{
+                border:0;
+                .goods_comment_attach{
+                    
+                    span{
+                        margin:0;
+                        width:100%;
+                        padding-bottom:133.33%;
+                        height:0;
+                        border:0;
+                        &:not(:first-child){
+                            display: none;
+                        }
+                    }
+                }
+                .content{
+                    width:100%;
+                    line-height: 15px;
+                    height:30px;
+                    overflow : hidden;
+                    text-overflow: ellipsis;
+                    display: -webkit-box;
+                    -webkit-line-clamp: 2;
+                    -webkit-box-orient: vertical;
+                }
+            }
+            .review_rating{
+                .review_title{
+                    display: none;
+                }
+                span{
+                    display: block;
+                    text-align: right;
+                }
+            }    
         }
     }
 
