--- a/skin/frontend/pc/default/scss/styles.css
+++ b/skin/frontend/pc/default/scss/styles.css
@@ -2844,7 +2844,7 @@ tr.summary-details-excluded { font-style: italic; }
 .page .review_list .review_rating { color: #4c5253; margin: 10px 0; overflow: hidden; }
 .page .review_list .reviewContent { border-bottom: 1px solid #ddd; }
 .page .review_list .reviewContent .goods_comment_attach span { display: inline-block; width: 66px; height: 86px; padding: 3px; border: 1px solid #ddd; text-align: center; margin-right: 3px; background-repeat: no-repeat; background-position: center center; background-size: 100% auto; }
-.page .review_fixed { position: fixed; top: 0; left: 0; bottom: 0; right: 0; background: #000; z-index: 1; }
+.page .review_fixed { position: fixed; top: 0; left: 0; bottom: 0; right: 0; background: rgba(0, 0, 0, 0.3); z-index: 1; }
 .page .review_fixed .review_detail { background: #fff; width: 700px; height: 550px; margin: 30px auto; padding: 10px; position: relative; }
 .page .review_fixed .review_detail .close_review { position: absolute; top: 0; right: 10px; font-size: 50px; line-height: 50px; height: 50px; }
 .page .review_fixed .review_detail .review_detail_images { width: 370px; float: left; }
@@ -2865,6 +2865,15 @@ tr.summary-details-excluded { font-style: italic; }
 .page .form-add { color: #666; }
 .page .form-add h2 { color: #666; }
 .page .form-add h4 { color: #666; }
+.page .VIEW_GALLERY .review_list { *zoom: 1; }
+.page .VIEW_GALLERY .review_list:after { display: block; content: "clear"; height: 0; clear: both; overflow: hidden; visibility: hidden; }
+.page .VIEW_GALLERY .review_list > div { float: left; width: 24%; margin-right: 1%; margin-bottom: 10px; height: 530px; overflow: hidden; border: 1px solid #ddd; border-radius: 3px; padding: 5px; }
+.page .VIEW_GALLERY .review_list .reviewContent { border: 0; }
+.page .VIEW_GALLERY .review_list .reviewContent .goods_comment_attach span { margin: 0; width: 100%; padding-bottom: 133.33%; height: 0; border: 0; }
+.page .VIEW_GALLERY .review_list .reviewContent .goods_comment_attach span:not(:first-child) { display: none; }
+.page .VIEW_GALLERY .review_list .reviewContent .content { width: 100%; line-height: 15px; height: 30px; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; }
+.page .VIEW_GALLERY .review_list .review_rating .review_title { display: none; }
+.page .VIEW_GALLERY .review_list .review_rating span { display: block; text-align: right; }
 
 .shopping_bag .scart_step1 { background: url("../images/commont/scart_step.gif") no-repeat center top; height: 48px; overflow: hidden; margin: 30px 0; }
 .shopping_bag .shopping_bag_title { border-bottom: 1px solid #51423A; font-size: 16px; text-transform: capitalize; color: #000; padding-bottom: 10px; }
