--- a/app/design/frontend/pc/default/template/page/home/review.phtml
+++ b/app/design/frontend/pc/default/template/page/home/review.phtml
@@ -29,7 +29,12 @@
 <div class="MT10 home_review owl-carousel">
     
     <?php foreach($_items as $review): ?>
-        <a class="item" href="javascript:;">
+        <a class="item" href="<?php 
+                                                                echo Mage::getModel('catalog/product')
+                                                                ->setStoreId(Mage::app()->getStore()->getId())
+                                                                ->load($review->getEntityPkValue())
+                                                                ->getProductUrl();
+                                                                    ?>#review-form">
             <?php if(  $review->getReviewimage1()  ):?>
                 <span style="background-image:url(<?php echo Mage::getBaseUrl("media").'reviewimages/'.$review->getReviewimage1();?>);"></span>
             <?php elseif(  $review->getReviewimage2()  ): ?>
